src/layouts/AppLayout.module.less
.menu {
  width: 100vw !important;
  height: 48px;
  border: none !important;
  box-shadow: none !important;
}

.logo {
  margin-left: -8px;
  display: inline-block;
  vertical-align: middle;

  svg {
    width: 36px;
    height: 36px;
  }
}

.siteName {
  text-align: center;

  .logo ~ & {
    margin-left: 3.5px;
    text-align: left;
    display: inline-block;
    vertical-align: middle;
  }

  font-size: 20px;
  font-family: Saira;
  font-weight: 500;
}

.userContainer {
  margin-left: auto;
  display: flex;
}

.loginAndRegisterButton {
  width: 70px;

  &:first-of-type {
    margin-right: 0.4em !important;
  }

  .sidebarMenu & {
    width: 50%;
    margin-right: 0 !important;
  }

  padding-left: 0 !important;
  padding-right: 0 !important;
}

:global(#noty_layout__topRight) {
  top: calc(20px + 48px) !important;
}

:global(.noty_body) {
  padding: 1em 1.05em !important;
}

@sidebarWidth: 180px;

:global(#root) .sidebarMenu {
  transform: translateX(@sidebarWidth) !important;
  width: @sidebarWidth !important;
  box-shadow: none !important;
  transition: transform 0.5s ease, box-shadow 0.5s ease !important;

  &.sidebarOpen {
    transform: translateX(0) !important;
    right: 0 !important;
    box-shadow: 0 0 20px rgba(34, 36, 38, 0.15) !important;
  }

  .userMenu {
    margin-top: 10px !important;
  }
}

.sidebarDimmer {
  position: fixed;
  right: 0;
  top: 0;
  height: 100vh;
  width: 100vh;
  background-color: rgba(0, 0, 0, 0.4);
  visibility: hidden;
  opacity: 0;
  z-index: 102; // Same as Semantic UI's sidebar menu
  transition: right 0.5s ease, visibility 0.5s ease, opacity 0.5s ease !important;

  &.sidebarOpen {
    right: @sidebarWidth !important;
    visibility: visible;
    opacity: 1;
  }
}

html.sidebarOpen {
  overflow: hidden !important;
}

body {
  display: block;
  margin-top: 49px;
  padding-top: 28px;
}

@media only screen and (max-width: 1127px) {
  :global(.ui.container) {
    width: 100% !important;
    margin-left: 0 !important;
    margin-right: 0 !important;
  }

  #mainUiContainer {
    width: auto !important;
    margin-left: 15px !important;
    margin-right: 15px !important;
  }
}

@media only screen and (min-width: 1128px) {
  #mainUiContainer, #mainMenuContainer {
    width: 1127px !important;
  }

  #mainUiContainer {
    max-width: calc(100% - 30px);
    padding-left: 15px !important;
    padding-right: 15px !important;
  }
}

// Reset SemanticUI scrollbar styles
// TODO: Remove the scrollbar style from SemanticUI css with webpack
@media only screen and (max-width: 767px) {
  body {
    padding-top: 15px;
  }

  ::-webkit-scrollbar {
    all: unset !important;
  }
  
  ::-webkit-scrollbar-track {
    all: unset !important;
  }
  
  ::-webkit-scrollbar-thumb {
    all: unset !important;
  }
}

.footer {
  margin: 2em 0em 0em !important;
  padding: 1em 0em !important;
  border: none !important;
  color: #999;
}

@media only screen and (max-width: 767px) {
  .footer {
    margin-top: 10px !important;
  }
}

.footerLinks {
  margin-top: 2px;

  > a {
    color: #999 !important;
  }
}

.languageSwitchContainer {
  :global(.icon) {
    font-size: 1.3em !important;
    margin-top: 2px;
  }
}

.languageSwitchMenu {
  left: 50% !important;
  transform: translateX(-50%);
}

